--- a/prog2c_koa_router/package.json
+++ b/prog2c_koa_router/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "koa": "^2.14.1",
-    "koa-body": "^6.0.1"
+    "koa-body": "^6.0.1",
+    "koa-router": "^12.0.0"
   }
 }
